Fix aspect ratio of speaker images on mobile.

--- a/components/speaker-section.module.css
+++ b/components/speaker-section.module.css
@@ -56,8 +56,6 @@
 
 .image {
   border-radius: var(--space-2x);
-  width: 100%;
-  height: auto;
 }
 
 @media (min-width: 768px) {
